# linux

./: README.md
android/: README.md
android/build-android/: README.md
android/cuttlefish/: README.md
create-usb-boot/: README.md  run.sh
create-usb-boot/windows/: prelaunch.bat  wimboot
create-usb-boot/windows/ImDisk/: IMDISK_install.cmd  imdisk.inf
create-usb-boot/windows/ImDisk/cpl/amd64/: imdisk.cpl
custom-ssh-dir/: REAMME.md  custom-ssh-dir.c
cuttlefish/: README.md
debian-xen/: README.md
debian-xen/files/: mac.cfg  windows-10.cfg
esp32/: README.md
esp32/odo_panel/: CMakeLists.txt  sdkconfig
esp32/odo_panel/main/: CMakeLists.txt  bluetooth_icon.cpp  bluetooth_icon.h  energy_meter.cpp  energy_meter.h  idf_component.yml  main.cpp  speed_meter.cpp  speed_meter.h  turn_signal.h  ui_lvgl.cpp
esp32/odo_panel/main/controller/: data_simulator.cpp  data_simulator.h
esp32/odo_panel/main/data/: vehicle_data.cpp  vehicle_data.h
esp32/odo_panel/main/ui/: bluetooth_icon.cpp  energy_meter.cpp  energy_meter.h  gear_indicator.cpp  gear_indicator.h  speed_meter.cpp  speed_meter.h  turn_signal.cpp  ui_lvgl.cpp  ui_lvgl.h  wifi_icon.cpp  wifi_icon.h
kernel-module/: README.md  build.sh
mysql/: README.md
mysql/sql/: create_database.sql  create_user.sql  example_data.sql
tiger-vnc/: README.md
vscode/on-old-linux/: README.md  install-libs.sh
warning-free/: app.py  create_database.sql  create_user.sql
warning-free/templates/: about.html  index.html  salary_graph.html  table.html
windows/: README.md
x11-forward/: README.md
(+4 files in other folders)
